<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:id="@+id/tv_autor_vacio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen"
            android:id="@+id/tv_resumen_vacio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:id="@+id/tv_titulo_vacio" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:id="@+id/tv_genero_vacio" />
<!--
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/b_resumen"
            android:text="@string/boton_resumen"
            android:onClick="onPulsame" />
-->


</LinearLayout>